Ignore storybook static folder

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -70,6 +70,7 @@ search:
     - app/assets/images
     - app/assets/fonts
     - app/assets/videos
+    - app/javascript/storybook-static
 
   ## Alternatively, the only files or `File.fnmatch patterns` to search in `paths`:
   ## If specified, this settings takes priority over `exclude`, but `exclude` still applies.
